@@ -1,15 +1,5 @@
-blob
-mark :1
-data 0
-
-reset refs/tags/tag1
-commit refs/tags/tag1
-mark :2
-author J. Random Hacker <jrh@foobar.com> 1456976400 -0500
-committer J. Random Hacker <jrh@foobar.com> 1456976400 -0500
-data 13
-First commit
-M 100644 :1 file
+reset refs/tags/tag4
+from refs/tags/tag4^0
 
 commit refs/tags/tag4
 mark :4
@@ -17,7 +7,6 @@ author J. Random Hacker <jrh@foobar.com> 1456976401 -0500
 committer J. Random Hacker <jrh@foobar.com> 1456976401 -0500
 data 42
 Added tag tag1 for changeset effd0fadefff
-from :2
 
 commit refs/tags/tag4
 mark :6
