@@ -1,66 +1,4 @@
 blob
-mark :1
-data 393
-#	Makefile for Battleships
-
-# Flags for use with the Linux ncurses package (recommended)
-# CFLAGS = -DNDEBUG  -I/usr/local/include -L/usr/local/lib
-# TERMLIB = -lncurses
-
-# Flags for use with stock curses
-CFLAGS = -DNDEBUG
-TERMLIB = -lcurses
-
-bs: bs.c
-	cc $(CFLAGS) -o bs bs.c $(TERMLIB)
-
-lint:
-	lint bs.c -lcurses
-
-clean:
-	rm -f bs bs.shar *~
-
-shar:
-	shar READ.ME bs.c Makefile bs.6 >bs.shar
-
-blob
-mark :2
-data 1341
-Battleships is an intrinsically silly game, but I couldn't resist fixing this
-sucker. It now has a purely visual interface (you place ships and call for
-shots by moving the cursor around the board using the standard yuhjklbn keys).
-
-The default game now disallows placement of ships so that they touch. A new
--c option is available to force the older behavior.
-
-I also removed the `seemiss' option (now always on) and `ask' (which is only
-useful for cheating). And I ifdefed out the ditsy opening screen; if you want
-it back, compile with -DPENGUIN. One strike against featureitis...
-
-The code now lints as clean as the broken SysV curses lint library will let it.
-
-Some #ifdefs in the code should result in the right things being done for
-BSD or USG systems. They key off A_UNDERLINE.
-
-This was probably a waste of a day or so. But what the hack -- rewriting the
-strategy robot as an FSM was fun, and maybe the interface will set a good
-example for the next guy.
-
-<*** FLAME ON ***>
-
-People who write termcap games that require you to enter #@!!#$! coordinates
-rather than doing the natural pick-and-place with cursor motions should be
-stuffed in suits and condemned to write COBOL for the rest of their days...
-
-<*** FLAME OFF ***>
-
-O.K., I feel better now that I've got that off my chest...
-
-						Eric S. Raymond
-						esr@snark.uu.net
-
-
-blob
 mark :3
 data 26995
 /* 
